Fix setting valid value in Special Action spinner when model has changed Refactor StateOn/Off Dutch translation, use common keys

--- a/java/src/jmri/NamedBeanBundle_fr.properties
+++ b/java/src/jmri/NamedBeanBundle_fr.properties
@@ -45,8 +45,8 @@ LabelUserName = Nom d'Utilisateur:
 # called in code as Bundle.getMessage("MakeLabel", Bundle.getMessage("BeanName")) so translation must include {0}
 MakeLabel            = {0} :
 
-LightStateOff = Off
-LightStateOn = On
+StateOff = Off
+StateOn = On
 LightStateIntermediate = Intermediaire
 LightStateTransitioning = Transition
 LightStateTransitioningToFullOn = Transition vers Compl\u00e8tement Allum\u00e9
