--- a/java/src/jmri/NamedBeanBundle_ja_JP.properties
+++ b/java/src/jmri/NamedBeanBundle_ja_JP.properties
@@ -29,8 +29,8 @@ FastClock           = \u30d5\u30a1\u30b9\u30c8\u30af\u30ed\u30c3\u30af
 # called in code as Bundle.getMessage("MakeLabel", Bundle.getMessage("BeanName")) so translation must include {0}
 MakeLabel            = {0} :
 
-LightStateOff = \u30aa\u30d5
-LightStateOn = \u30aa\u30f3
+StateOff = \u30aa\u30d5
+StateOn = \u30aa\u30f3
 LightStateIntermediate = \u5373\u6642
 LightStateTransitioning = \u9077\u79fb
 LightStateTransitioningToFullOn = \u5168\u70b9\u706f\u306b\u9077\u79fb
