--- a/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_ca.properties
+++ b/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_ca.properties
@@ -6,6 +6,7 @@
 #
 # Traducci\u00f3 al catal\u00e0: Joan de Castro Alemany (Joan276dca@yahoo.es) 22/08/2016
 
+# compare entries with jmri.jmrit.dispatcher.DispatcherBundle
 SectionSystemNameHint = Entra el nom de sistema per a la nova Secci\u00f3, ex. IY13
 SectionUserNameHint = Entra el nom d'usuari per a la secci\u00f3, ex. Martorell a Manresa
 SectionCreateButtonHint = Prem  per verificar entrades i crear Seccions noves.
@@ -41,7 +42,8 @@ AddEditActions = Visualitza/Afegeix/Edita Accions
 DirectionColName = Direcci\u00f3
 AlternateColName = Alternativa
 TitleViewActions = Visualitza Accions
-TitleAddEditAction = Afegeix/Edita Accions
+TitleAddAction = Afegeix Accions
+TitleEditAction = Edita Accions
 SequenceAbbrev = Seq\u00fc\u00e8ncia
 WhenColName = Quan
 WhatColName = Acci\u00f3 Requerida
@@ -76,8 +78,6 @@ ReplacePrimaryChoice = Siusplau selecciona una Secci\u00f3 per canviar \nla sele
 ReplacePrimaryTitle = Escull una Secci\u00f3
 AddAlternateChoice = Siusplau select an Secci\u00f3 Alternativa to add.
 AddAlternateTitle = Escull una Secci\u00f3 Alternativa
-CreateSectionButton = Crea una Secci\u00f3
-UpdateSectionButton = Actualitza Secci\u00f3
 CancelButtonHint = Prem per cancel\u00b7lar sense crear o actualitzar.
 DeleteAllBlocksButton = Elimina tots els Blocs
 DeleteAllBlocksButtonHint = Prem per eliminar tots els Blocs de la taula superior i torna a comen\u00e7ar.
@@ -94,8 +94,6 @@ WhatBoxTip = Selecciona quina acci\u00f3 es necessita
 OptionalDelay = Retard Opcional
 Milliseconds = (mil\u00b7lisegons)
 BlockStringTip = Selecciona un Bloc d'aquesta Secci\u00f3
-On = On
-Off = Off
 DoneSensorLabel = Sensor fet (opcional)
 HintDoneSensor = (Opcional) Entra el nom d'un sensor per a notificar el dispatcher quan funcioni.
 
@@ -196,7 +194,6 @@ ValidateAllSections = Validat totes les Seccions
 SetupDirectionSensors = Estableix Sensors de Sentit a la L\u00f2gica
 RemoveDirectionSensors = Elimina Sensors de Sentit a la L\u00f2gica
 
-MessageTitle = Missatge
 ChoiceTitle = Escull Panell
 MissingEntryError = Error - L'entrada "{0}" no s'ha trobat.
 EntryError = Error a l'entrada "{0}" -
