--- a/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_da.properties
+++ b/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_da.properties
@@ -5,6 +5,7 @@
 #     jmri.jmrit.beantable.TransitTableAction GUI elements not contained in 
 #     jmri.jmrit.beantable.BeanTableBundle.properties
 
+# compare entries with jmri.jmrit.dispatcher.DispatcherBundle
 SectionSystemNameHint = Enter system name for new Section, e.g. IY13
 SectionUserNameHint = Enter user name for Section, e.g. Sloan to Baxter
 SectionCreateButtonHint = Press to check entries and create a new Section.
@@ -35,13 +36,13 @@ UpdateActionButtonHint = Press to update this Action
 CreateActionButton = Opret Ny Action
 CreateActionButtonHint = Press to create new Action
 SequenceColName = Order
-#SectionName = Section
 ActionColName = Actions
 AddEditActions = View/Add/Edit Actions
 DirectionColName = Direction
 AlternateColName = Alternate
 TitleViewActions = View Actions
-TitleAddEditAction = Add/Edit Action
+TitleAddAction = Add Action
+TitleEditAction = Edit Action
 SequenceAbbrev = Sequence
 WhenColName = When
 WhatColName = Action Requested
@@ -70,14 +71,12 @@ ReplacePrimaryForSeqButton = Replace Primary For Order
 ReplacePrimaryForSeqButtonHint = Press to replace the primary Section at the entered order number, if possible.
 DeleteAlternateForSeqButton = Delete Alternate For Order
 DeleteAlternateForSeqButtonHint = Press to delete all alternate Sections at the entered order number, if any.
-AddAlternateForSeqButton = Add Alternate For Order
+AddAlternateForSeqButton = Add Alternate for Order
 AddAlternateForSeqButtonHint = Press to add an alternate Section at the entered order number, if possible.
 ReplacePrimaryChoice = Please select a Section to replace \nthe current Primary Selection.
 ReplacePrimaryTitle = Choose Section
 AddAlternateChoice = Please select an alternate Section to add.
 AddAlternateTitle = Choose Alternate Section
-CreateSectionButton = Create Section
-UpdateSectionButton = Update Section
 CancelButtonHint = Press to cancel without creating or updating.
 DeleteAllBlocksButton = Delete All Blocks
 DeleteAllBlocksButtonHint = Press to delete all Blocks in the above table and start again.
@@ -94,8 +93,6 @@ WhatBoxTip = Select what action is requested
 OptionalDelay = Optional Delay
 Milliseconds = (milliseconds)
 BlockStringTip = Select a Block within this Section
-On = On
-Off = Off
 DoneSensorLabel = Done Sensor (optional)
 HintDoneSensor = (Optional) Enter name of sensor for notifying dispatcher when done working.
 
