--- a/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_de.properties
+++ b/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_de.properties
@@ -5,6 +5,7 @@
 #     jmri.jmrit.beantable.TransitTableAction GUI elements not contained in
 #     jmri.jmrit.beantable.BeanTableBundle.properties
 
+# compare entries with jmri.jmrit.dispatcher.DispatcherBundle
 SectionSystemNameHint = Gebe Systemnamen des Bereichs ein, z.B. IY13
 SectionUserNameHint = Gebe Benutzernamen des Bereichs ein, z.B. Sloan to Baxter
 SectionCreateButtonHint = Klicken, um Eingabe zu \u00fcberpr\u00fcfen und einen neuen Bereich zu erzeugen.
@@ -37,7 +38,8 @@ AddEditActions = Aktivit\u00e4ten ansehen/hinzuf\u00fcgen/bearbeiten
 DirectionColName = Richtung
 AlternateColName = Alternative
 TitleViewActions = Aktivit\u00e4ten ansehen
-TitleAddEditAction = Aktivit\u00e4ten hinzuf\u00fcgen/bearbeiten
+TitleAddAction = Aktivit\u00e4ten hinzuf\u00fcgen
+TitleEditAction = Aktivit\u00e4ten bearbeiten
 SequenceAbbrev = Sequenz
 WhenColName = Wann
 WhatColName = Angeforderte Aktivit\u00e4t
@@ -54,8 +56,6 @@ AddPrimaryButtonHint = Klicke um die gew\u00e4hlte Sektion zum aktuellen Zuglauf
 AddAlternateButton = F\u00fcge alternative Sektion ein
 AddAlternateButtonHint = Klicke um die gew\u00e4hlte Sektion zum aktuellen Zuglauf als Alternative hinzu zu f\u00fcgen.
 
-CreateSectionButton = Erzeuge Sektion
-UpdateSectionButton = Aktualisiere Sektion
 CancelButtonHint = Klicke um ohne Abspeichern abzubrechen.
 DeleteAllBlocksButton = Alle Streckenbl\u00f6cke wegnehmen
 DeleteAllBlocksButtonHint = Klicke um alle obigen Streckenbl\u00f6cke von der Liste zu l\u00f6schen und neu zu beginnen.
@@ -71,8 +71,6 @@ WhatBoxTip = W\u00e4hle welche Aktivit\u00e4t gefordert ist
 OptionalDelay = Optionale Verz\u00f6gerung
 Milliseconds = (Millisekunden)
 BlockStringTip = W\u00e4hle einen Block innerhalb dieser Sektion
-On = An
-Off = Aus
 HeadLabel = Signalschirm:
 MastLabel = oder Mast:
 SelectASignal = W\u00e4hle aus 
@@ -171,7 +169,6 @@ ValidateAllSections = Validiere alle Sektionen
 SetupDirectionSensors = Initialisiere Richtungsdetektoren in der Logik
 RemoveDirectionSensors = Entferne Richtungsdetektoren aus der Logik
 
-MessageTitle = Mitteilung
 ChoiceTitle = W\u00e4hle Gleisbild
 MissingEntryError = Fehler - die notwendige Eingabe "{0}" wurde nicht gefunden.
 EntryError = Fehler in der Eingabe "{0}" -
