--- a/java/src/jmri/NamedBeanBundle_ca.properties
+++ b/java/src/jmri/NamedBeanBundle_ca.properties
@@ -32,8 +32,8 @@ LabelUserName        = Nom d'usuari:
 ColumnSystemName     = Nom de sistema
 ColumnUserName       = Nom d'usuari
 
-LightStateOff = Off
-LightStateOn = On
+StateOff = Off
+StateOn = On
 LightStateIntermediate = Intermedi
 LightStateTransitioning = Transici\u00f3
 LightStateTransitioningToFullOn = Transici\u00f3 a ON
