--- a/java/src/jmri/NamedBeanBundle_cs.properties
+++ b/java/src/jmri/NamedBeanBundle_cs.properties
@@ -42,8 +42,8 @@ LabelUserName        = U\u017eivatelsk\u00fd n\u00e1zev:
 ColumnSystemName     = Syst\u00e9mov\u00fd n\u00e1zev
 ColumnUserName       = U\u017eivatelsk\u00fd n\u00e1zev
 
-LightStateOff = Zhasnuto
-LightStateOn = Rozsv\u00edceno
+StateOff = Zhasnuto
+StateOn = Rozsv\u00edceno
 LightStateIntermediate = St\u0159edn\u00ed
 LightStateTransitioning = P\u0159ech\u00e1zej\u00edc\u00ed
 LightStateTransitioningToFullOn = P\u0159ech\u00e1zej\u00edc\u00ed na pln\u011b rozsv\u00edceno
