--- a/java/src/jmri/NamedBeanBundle_da.properties
+++ b/java/src/jmri/NamedBeanBundle_da.properties
@@ -47,8 +47,8 @@ ColumnState             = Tilstand
 # called in code as Bundle.getMessage("MakeLabel", Bundle.getMessage("BeanName")) so translation must include {0}
 MakeLabel            = {0}:
 
-LightStateOff = Slukket
-LightStateOn = T\u00e6ndt
+StateOff = Slukket
+StateOn = T\u00e6ndt
 LightStateIntermediate = Mellemliggende
 LightStateTransitioning = Overgang
 LightStateTransitioningToFullOn = Overgang til Fuld T\u00e6ndt
