--- a/java/src/jmri/NamedBeanBundle_it.properties
+++ b/java/src/jmri/NamedBeanBundle_it.properties
@@ -36,8 +36,8 @@ LabelUserName = Nome Utente:
 
 FastClock            = Orologio Accellerato
 
-LightStateOff        = Off
-LightStateOn         = On
+StateOff        = Off
+StateOn         = On
 LightStateIntermediate = Intermedio
 LightStateTransitioning = Transizione
 LightStateTransitioningToFullOn = Transizione verso ON
