--- a/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_fr.properties
+++ b/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_fr.properties
@@ -6,6 +6,7 @@
 #
 # Translated by Herv\u00e9 BLOREC <bzh56420@yahoo.fr> le 2013-8-19
 
+# compare entries with jmri.jmrit.dispatcher.DispatcherBundle
 SectionSystemNameHint = Entrez le nom syst\u00e8me pour la nouvelle Section, ex: IY13
 SectionUserNameHint = Entrez le nom utilisateur pour la section, par exemple, Sloan pour Baxter
 SectionCreateButtonHint = Appuyez sur pour v\u00e9rifier les entr\u00e9es et cr\u00e9er une nouvelle section.
@@ -36,13 +37,13 @@ UpdateActionButtonHint = Appuyez sur pour mettre \u00e0 jour cette Action
 CreateActionButton = Cr\u00e9er Nouv Act
 CreateActionButtonHint = Appuyez sur pour cr\u00e9er une nouvelle Action
 SequenceColName = Ordre
-#SectionName = Section
 ActionColName = Actions
 AddEditActions = Voir/Ajouter/modifier des Actions
 DirectionColName = Direction
 AlternateColName = Alternative
 TitleViewActions = Voir les Actions
-TitleAddEditAction = Ajouter/Modifier Action
+TitleAddAction = Ajouter Action
+TitleEditAction = Modifier Action
 SequenceAbbrev = S\u00e9quence
 WhenColName = Lorsque
 WhatColName = Action Demand\u00e9e
@@ -76,8 +77,6 @@ AddAlternateForSeqButtonHint = Appuyez sur pour ajouter une Section alternative 
 ReplacePrimaryChoice = Veuillez s\u00e9lectionner une Section pour remplacer\nLa S\u00e9lection Primaire Actuelle.
 AddAlternateChoice = Veuillez s\u00e9lectionner une autre Section \u00e0 ajouter.
 AddAlternateTitle = Choisir la Section Alternative
-CreateSectionButton = Cr\u00e9er Section
-UpdateSectionButton = M \u00e0 J Section
 CancelButtonHint = Appuyez sur pour annuler sans cr\u00e9er ou mettre \u00e0 jour.
 DeleteAllBlocksButton = Supp tous Cant
 DeleteAllBlocksButtonHint = Appuyez sur pour supprimer tous les Cantons dans le tableau ci-dessus et recommencez.
@@ -94,8 +93,6 @@ WhatBoxTip = S\u00e9lectionnez ce pourquoi l'action est demand\u00e9e
 OptionalDelay = Option Temporisation
 Milliseconds = (millisecondes)
 BlockStringTip = S\u00e9lectionner un Canton au sein de cette Section
-On = Allum\u00e9
-Off = \u00c9teint
 DoneSensorLabel = Capteur Fait (facultatif)
 HintDoneSensor = (Facultatif) Entrez le nom du capteur pour avertir le R\u00e9partiteur lorsque vous aurez termin\u00e9 de travailler.
 
@@ -172,7 +169,6 @@ EntryPointTable = Tableau des points d'entr\u00e9e
 SetManually = R\u00e9glage manuel
 UseConnectivity = Ensemble utilisant la connectivit\u00e9 \u00e0 partir du Panneau \u00c9diteur de R\u00e9seau:
 FromBlock = Canton entrant par
-# GT - 12-Oct-2009
 ToBlock = Canton d'entr\u00e9e
 TravelDirection = Direction du voyage
 DirectionNote = Note: La direction AVANT est du Canton Haut vers le Canton du bas.
@@ -192,7 +188,6 @@ ValidateAllSections =Valider Toutes les Sections
 SetupDirectionSensors = R\u00e9gler Capteurs de Direction Situ\u00e9 dans la Logique
 RemoveDirectionSensors =  Retirer les Capteurs de direction \u00e0 partir de la Logique
 
-MessageTitle = Message
 ChoiceTitle = Choisissez Panneau
 MissingEntryError = Erreur - L'Entr\u00e9e n\u00e9cessaire "{0}" n'a pas \u00e9t\u00e9 trouv\u00e9e.
 EntryError = Erreur dans l'entr\u00e9e "{0}" -
