--- a/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_it.properties
+++ b/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_it.properties
@@ -6,6 +6,7 @@
 #
 # Translation: Enzo Fortuna (babbo_enzo@yahoo.com )
 
+# compare entries with jmri.jmrit.dispatcher.DispatcherBundle
 SectionSystemNameHint = Immettere il nome di sistema per nuova sezione, p.es. IY13
 SectionUserNameHint = Immettere il nome utente per la Sezione, p.es. Sloan per Baxter
 SectionCreateButtonHint = Premere per controllare le voci e creare una nuova sezione.
@@ -36,13 +37,13 @@ UpdateActionButtonHint = Premere per aggiornare questa Azione
 CreateActionButton = Crea nuova Azione
 CreateActionButtonHint = Premere per creare una nuova Azione
 SequenceColName = Ordine
-#SectionName = Sezione
 ActionColName = Azioni
 AddEditActions = Mostra/Aggiungi/Modifica Azioni
 DirectionColName = Direzione
 AlternateColName = Alternativo
 TitleViewActions = Mostra Azioni
-TitleAddEditAction = Aggiungi/Modifica Azioni
+TitleAddAction = Aggiungi Azioni
+TitleEditAction = Modifica Azioni
 SequenceAbbrev = Sequenza
 WhenColName = Quando
 WhatColName = Azioni Richieste
@@ -77,8 +78,6 @@ ReplacePrimaryChoice = Si prega di selezionare una sezione per sostituire \nla s
 ReplacePrimaryTitle = Scegli sezione
 AddAlternateChoice = Si prega di selezionare una sezione alternativa da aggiungere.
 AddAlternateTitle = Scegli sezione alternativa
-CreateSectionButton = Crea sezione
-UpdateSectionButton = Aggiorna Sezione
 CancelButtonHint = Premere per annullare senza creare o aggiornare.
 DeleteAllBlocksButton = Elimina tutti i blocchi
 DeleteAllBlocksButtonHint = Premere per eliminare tutti i blocchi nella tabella qui sopra e ricominciare.
@@ -95,8 +94,6 @@ WhatBoxTip = Selezionare quale azione viene richiesta
 OptionalDelay = Ritardo opzionale
 Milliseconds = (millisecondi)
 BlockStringTip = Selezionare un blocco all'interno di questa sezione
-On = On
-Off = Off
 DoneSensorLabel = Fine sensore (opzionale)
 HintDoneSensor = (opzionale) Inserire il nome del sensore per la notifica al dispatcher di fine lavoro.
 
@@ -173,7 +170,6 @@ EntryPointTable = Tabella dei Punti di Entrata
 SetManually = Imposta manualmente
 UseConnectivity = Imposta utilizzando la connettivit\u00e0 da Pannello Editor Tracciati:
 FromBlock = Entrata Blocco da
-# GT - 12-Oct-2009
 ToBlock = Entrata Blocco
 TravelDirection = Direzione di marcia
 DirectionNote = Nota: La Direzione di marcia \u00e8 dal blocco superiore verso il blocco inferiore.
@@ -193,7 +189,6 @@ ValidateAllSections = Convalida tutte le sezioni
 SetupDirectionSensors = Imposta sensori di direzione in Logica
 RemoveDirectionSensors = Rimuovere i sensori di direzione da Logica
 
-MessageTitle = Messaggio
 ChoiceTitle = Scegli Pannello
 MissingEntryError = Errore - il numero richiesto di "{0}" non \u00e8 stato trovato.
 EntryError = Errore in "{0}" voce -
