SectionTransitBundle Dutch translation Fix Transit Special Action spinner values after change of What Some Dutch spelling fixes

--- a/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_da.properties
+++ b/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_da.properties
@@ -94,7 +94,7 @@ OptionalDelay = Optional Delay
 Milliseconds = (milliseconds)
 BlockStringTip = Select a Block within this Section
 DoneSensorLabel = Done Sensor (optional)
-HintDoneSensor = (Optional) Enter name of sensor for notifying dispatcher when done working.
+HintDoneSensor = (Optional) Select a Sensor for notifying the dispatcher when done working.
 
 OnEntry = On Section Entry
 HintDelayData = (Optional) Enter time in milliseconds to wait before action is initiated
@@ -117,7 +117,8 @@ TrainStart = On Train Start
 TrainStartFull = When train starts moving
 TrainStartDelayedFull = "{0}" ms. after train starts moving
 OnSensorActive = On Sensor ACTIVE
-HintSensorEntry = Enter the system name or user name of the Sensor
+HintSensorEntry = Select the Sensor to watch
+HintSignalEntry = Select the Signal Head or Mast
 OnSensorActiveFull = When Sensor "{0}" becomes ACTIVE
 OnSensorActiveDelayedFull = "{0}" ms. after Sensor "{1}" becomes ACTIVE
 OnSensorInactive = On Sensor INACTIVE
@@ -175,14 +176,14 @@ DirectionNote = Note: FORWARD direction is from the top Block toward the bottom 
 
 DirectionSensorLabel = Direction Sensors (Optional)
 ForwardSensor = Forward Sensor:
-ForwardSensorHint = Enter forward sensor name (system or user).
+ForwardSensorHint = Select Forward Sensor.
 ReverseSensor = Reverse Sensor:
-ReverseSensorHint = Enter reverse sensor name (system or user).
+ReverseSensorHint = Select Reverse Sensor.
 StoppingSensorLabel = Stopping Sensors (Optional)
 ForwardStopSensor = Forward Stopping Sensor:
-ForwardStopSensorHint = Enter forward stopping sensor name (system or user).
+ForwardStopSensorHint = Select Forward Stopping Sensor.
 ReverseStopSensor = Reverse Stopping Sensor:
-ReverseStopSensorHint = Enter reverse stopping sensor name (system or user).
+ReverseStopSensorHint = Select Reverse Stopping Sensor.
 
 ValidateAllSections = Validate All Sections
 SetupDirectionSensors = Set Direction Sensors in Logic
@@ -194,52 +195,52 @@ MissingEntryError = Error - the required "{0}" entry was not found.
 EntryError = Error in "{0}" entry -
 EntryRangeError = "{0}" entry is not in the allowed range of "{1}" through "{2}"
 MissingPattern = Error - pattern for horn sounding was not entered.
-ErrorPattern = Error - bad character in horn pattern. Only "s" and "l" are allowed.
+ErrorPattern = Error - bad character in horn pattern. Only "s" (for Short) and "l" (for Long) are allowed.
 PauseTime = Pause Time
 SpeedPercentage = Speed Percentage
 HornBlastLength = Horn Blast Length
 ShortBlastLength = Short Blast Length
 LongBlastLength = Long Blast Length
 FunctionNumber = Function Number
-NoSensorError = Error - no Sensor name was entered.
-SensorEntryError = Entered Sensor name does not correspond to a Sensor in the Sensor Table.
+NoSensorError = Error - no Sensor was selected.
+SensorEntryError = Selected Sensor does not correspond to a Sensor in the Sensor Table.
 
-Message1 = Sections require Blocks and Paths. Please define them before creating Sections.
-Message2 = Error - Cannot create a new Section. System name or user name is not unique.
-Message3 = Error - Cannot update. The new user name is already in use for another Section.
-Message4 = Error adding block to Section. Please press Cancel and try again.
-Message5 = Error - No block to add.
-Message6 = Error - A Section must have at least one block. Please add blocks and try again.
-Message7 = Error - Could not provide forward sensor. Please correct forward sensor name and try again.
-Message8 = Error - Could not provide reverse sensor. Please correct reverse sensor name and try again.
-Message9 = Error - Forward and reverse sensors must be different. Please try again.
+Message1 = Sections require Blocks and Paths. Please define those before creating Sections.
+Message2 = Error - Cannot create a new Section. System Name or User Name is not unique.
+Message3 = Error - Cannot update. The new User Name is already in use for another Section.
+Message4 = Error adding Block to Section. Please press Cancel and try again.
+Message5 = Error - No Block to add.
+Message6 = Error - A Section must have at least one Block. Please add Blocks and try again.
+Message7 = Error - Could not provide Forward Sensor. Please correct Forward Sensor choice and try again.
+Message8 = Error - Could not provide Reverse Sensor. Please correct Reverse Sensor choice and try again.
+Message9 = Error - Forward and Reverse Sensors must be different. Please try again.
 Message10 = Error - Entry point direction is UNKNOWN. Please assign direction of all Entry Points.
 Message11 = Please choose a Layout Editor panel to define connectivity.
 Message12 = Warning - Tool request cancelled because you cancelled\n instead of choosing a Layout Editor panel as required.
-Message13 = Request cancelled. This tool requires a Layout Editor panel\nto define connectivity.  Please create or load one and try again.
+Message13 = Request cancelled. This tool requires a Layout Editor panel\nto define connectivity. Please create or load such a Panel and try again.
 Message14 = {0} error messages issued when validating Sections.\nSee error log for details.
 Message15 = All Sections were checked. No errors found.
 Message16 = There are no Sections in the Section Table.
-Message17 = The Section - "{0}" - is in use by the following Transits - 
+Message17 = The Section "{0}" is in use by the following Transits - 
 Message18 = Deleting this Section will break the Transits. 
 Message18a = Recommend deleting affected Transits first. 
-Message19 = No Transits use Section - "{0}", but it may be in use elsewhere. 
+Message19 = No Transits use Section "{0}", but it may be in use elsewhere. 
 Message20 = Do you still want to delete this Section?
 
 Message21 = Transits kr\u00e6ver sektioner. Please define Sections before attempting to create Transits.
-Message22 = Error - Cannot create a new Transit. System name or user name is not unique.
+Message22 = Error - Cannot create a new Transit. System Name or User Name is not unique.
 Message23 = A Transit may not have more than 150 Sections assigned to it.
-Message24 = Error - No alternate section to add.
-Message25 = Error - No section to add.
+Message24 = Error - No Alternate Section to add.
+Message25 = Error - No Section to add.
 Message26 = A Transit requires at least two primary Sections.\nPlease add Sections before attempting to create/update this Transit.
-Message27 = {0} error or warning messages issued when placing direction sensors in signal logic.\nSee error log for details.
-Message28 = Directions sensors placed in signal logic with no errors or warnings issued.
+Message27 = {0} error or warning messages issued when placing direction Sensors in Signal Logic.\nSee Console log for details.
+Message28 = Directions Sensors placed in Signal Logic with no errors or warnings issued.
 Message29 = This tool requires a Layout Editor panel, but no Layout Editor panel is present.
-Message30 = Cannot place direction sensors because there are no sections defined.
-Message31 = Directions sensors removed from signal logic with no errors.
-Message32 = Cannot remove direction sensors because there are no sections defined.
-Message33 = {0} error messages issued when removing direction sensors from signal logic.\nSee error log for details.
-Message34 = Valid order number must be entered before attempting to edit by order number.\nPlease try again.
+Message30 = Cannot place direction Sensors because there are no sections defined.
+Message31 = Directions Sensors removed from Signal Logic with no errors.
+Message32 = Cannot remove direction Sensors because no Sections have been defined.
+Message33 = {0} error messages issued when removing direction Sensors from Signal Logic.\nSee Console log for details.
+Message34 = Valid order number must be entered before attempting to edit by order number.\nPlease choose a value seen in column 1 and try again.
 Message35 = Error - No Section to insert at beginning.
 Message36 = Sorry, no Section found to replace the Primary Section at "{0}".
 Message37 = Sorry, no new alternate Section found for the Primary Section at "{0}".
