--- a/java/src/jmri/jmrit/beantable/beanedit/BeanEditBundle_nl.properties
+++ b/java/src/jmri/jmrit/beantable/beanedit/BeanEditBundle_nl.properties
@@ -19,8 +19,8 @@ BlockPropertiesText = Werkelijke kenmerken van het Blok op dit tabblad invullen.
 BlockLengthUnits = Maateenheid
 BlockLengthUnitsText = Kies de eenheid voor lengte.
 BlockLengthText = Werkelijke lengte van het Blok op de baan (dus niet verschaald)
-BlockMaxSpeedText = Kies de maximum rijsnelheid in dit blok.
-BlockPermissiveText = Mag een andere trein dit blok binnenrijden als het (nog) bezet is?
+BlockMaxSpeedText = Kies de maximum rijsnelheid in dit Blok.
+BlockPermissiveText = Mag een andere trein dit Blok binnenrijden als het (nog) bezet is?
 BlockAssignSensorText = Kies een terugmelder voor bezetmelding van dit Blok.
 SensorDebounceText = Voer ontstoringswaarden voor terugmelder in.\nOntstoringstimer berekent een vertraging voordat een Terugmelder een toestandswijziging doorgeeft.\nDit voorkomt valse meldingen door vuile wielen etc.
 SensorInActiveDebounceText = Vertraging in milliseconden voordat een terugmelder Inactief aangeeft
