--- a/java/src/apps/ActionListBundle_nl.properties
+++ b/java/src/apps/ActionListBundle_nl.properties
@@ -47,7 +47,7 @@ jmri.jmrit.beantable.BlockTableAction = Open Blokkentabel
 jmri.jmrit.beantable.LogixTableAction = Open Logixtabel
 jmri.jmrit.beantable.OBlockTableAction = Open Bezetmeldblokkentabel
 jmri.jmrit.beantable.SectionTableAction = Open Baanvakkentabel
-jmri.jmrit.beantable.TransitTableAction = Open Transitstabel
+jmri.jmrit.beantable.TransitTableAction = Open Trajectentabel
 jmri.jmrit.beantable.AudioTableAction = Open Audiotabel
 jmri.jmrit.beantable.IdTagTableAction = Open ID Tags-tabel
 jmri.jmrit.blockboss.BlockBossAction = Open SSL gereedschap
