--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_ja_JP.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_ja_JP.properties
@@ -86,7 +86,7 @@ EditBlockNameHint = Edit block name to change the linked block. If new name, blo
 EditBlockBNameHint = Edit this block name to change the block linked to second connecting point.
 EditBlockCNameHint = Edit this block name to change the block linked to third connecting point.
 EditBlockDNameHint = Edit this block name to change the block linked to fourth connecting point.
-DoneHint = \u5b8c\u4e86\u30dc\u30bf\u30f3\u3092\u62bc\u3059\u3068\u3001\u3044\u307e\u307e\u3067\u306b\u884c\u3063\u305f\u5909\u66f4\u304c\u9069\u7528\u3055\u308c\u3001\u3053\u306e\u30c0\u30a4\u30e4\u30ed\u30b0\u304c\u9589\u3058\u307e\u3059\u3002
+DoneHint = [{0}] \u5b8c\u4e86\u30dc\u30bf\u30f3\u3092\u62bc\u3059\u3068\u3001\u3044\u307e\u307e\u3067\u306b\u884c\u3063\u305f\u5909\u66f4\u304c\u9069\u7528\u3055\u308c\u3001\u3053\u306e\u30c0\u30a4\u30e4\u30ed\u30b0\u304c\u9589\u3058\u307e\u3059\u3002
 CancelHint = \u53d6\u308a\u6d88\u3057\u30dc\u30bf\u30f3\u3092\u62bc\u3059\u3068\u3001\u5909\u66f4\u3092\u53d6\u308a\u6d88\u3057\u3066\u3053\u306e\u30c0\u30a4\u30e4\u30ed\u30b0\u304c\u9589\u3058\u307e\u3059\u3002
 EditBlock = \u30d6\u30ed\u30c3\u30af{0}\u4f5c\u6210\uff0f\u7de8\u96c6
 EditBlockHint = \u3053\u3053\u3092\u30af\u30ea\u30c3\u30af\u3059\u308b\u3068\u3001\u4ee5\u4e0b\u306e\u30d6\u30ed\u30c3\u30af{0}\u306e\u60c5\u5831\u3092\u4f5c\u6210\uff0f\u7de8\u96c6\u3067\u304d\u307e\u3059\u3002
@@ -241,7 +241,6 @@ ChangeSignalIconHint = Click to change icons used to represent signal heads. (\u
 SignalHeadNameHint = Enter name (system or user) of signal head located here.
 SignalHeadEastNameHint = Enter name (system or user) of signal head for right-bound (east) or down-bound (south) trains.
 SignalHeadWestNameHint = Enter name (system or user) of signal head for left-bound (west) or up-bound (north) trains.
-SignalDoneHint = \u5b8c\u4e86\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u4ee5\u4e0a\u306e\u51e6\u7406\u3092\u7d42\u4e86\u3057\u3001\u30c0\u30a4\u30a2\u30ed\u30b0\u3092\u9589\u3058\u307e\u3059\u3002
 SignalsError1 = \u30a8\u30e9\u30fc - No turnout name was entered. Please enter a turnout name or cancel.
 SignalsError2 = \u30a8\u30e9\u30fc - No turnout is defined for "{0}". Please enter \na turnout name in the Turnout Table and on the panel.
 SignalsError3 = \u30a8\u30e9\u30fc - Turnout "{0}" is not drawn on the panel.\nPlease enter the name of a drawn turnout.
@@ -298,8 +297,6 @@ Error17 = \u30a8\u30e9\u30fc - Reporter manager not available. Cannot add Report
 Error18 = \u30a8\u30e9\u30fc - Could not provide Reporter {0}. \u30ec\u30dd\u30fc\u30bf\u30fc\u30a2\u30a4\u30b3\u30f3\u306f\u8ffd\u52a0\u3055\u308c\u307e\u305b\u3093\u3002
 
 # question messages
-ButtonYesPlus = \u306f\u3044 - \u8b66\u544a\u505c\u6b62
-ButtonOKPlus = \u78ba\u8a8d - \u8b66\u544a\u3092\u505c\u6b62
 Question1 = \u672c\u5f53\u306b\u3053\u306e\u5206\u5c90\u3092\u30d1\u30cd\u30eb\u304b\u3089\u524a\u9664\u3057\u307e\u3059\u304b turnout from the panel, along with any connected Track Segments?
 Question2 = \u672c\u5f53\u306b\u3053\u306e\u70b9\u3092\u30d1\u30cd\u30eb\u304b\u3089\u524a\u9664\u3057\u307e\u3059\u304bpoint from the panel, along with any connected Track Segments?
 Question3 = \u672c\u5f53\u306b\u3053\u306e\u30ec\u30d9\u30eb\u3092\u30d1\u30cd\u30eb\u304b\u3089\u524a\u9664\u3057\u307e\u3059\u304blevel crossing from the panel, along with any connected Track Segments?
