Full Dutch translation for LE and Display Bundle (CPE) i18n CPE context menu Properties, fix Rotate key var, adjust LE Connections contect menu

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_da.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_da.properties
@@ -154,11 +154,11 @@ UseCount = Aktuel Brugt Antal
 OccupiedSense = Occupied Sense
 OccupiedSenseHint = Select the occupancy Sensor state when the Block is occupied.
 MemoryVariableTip = Enter name (system or user) of Memory Variable (optional).
-TrackColor = Spor farve:
+TrackColor=Spor farve
 TrackColorHint = Select the track color when this block is unoccupied.
-OccupiedColor = Optaget Spor Farve:
+OccupiedColor=Optaget Spor Farve
 OccupiedColorHint = Select the track color when this block is occupied.
-ExtraColor = Alternativ Spor Farve:
+ExtraColor=Alternativ Spor Farve
 ExtraColorHint = Select the track color for unoccupied special use, e.g. allocated.
 EnterTrackWidth = Indtast Spor Bredde
 SideTrackWidth = Side Spor Bredde
