--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_de.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_de.properties
@@ -114,9 +114,9 @@ ContinuingState=Weichenposition Gerade
 BlockContentsLabel = Blockanschrift
 BlockIDToolTip=Gebe Namen des Blockes ein f\u00fcr neue Weiche, Kreuzung oder Gleisstrecke.
 Anchor=Verankerungspunkt
-TrackColor=Gleisfarbe:
-OccupiedColor=Farbe Besetztes Gleis:
-ExtraColor=Alternatives Gleisfarbe:
+TrackColor=Gleisfarbe
+OccupiedColor=Farbe Besetztes Gleis
+ExtraColor=Alternatives Gleisfarbe
 OptionsMnemonic=O
 EditMode=Bearbeitungsmodus
 EditModeMnemonic=B
