--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_fr.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_fr.properties
@@ -142,11 +142,11 @@ UseCount                = Utilisation du Compte Actuel
 OccupiedSense           = Sens occup\u00e9
 OccupiedSenseHint       = S\u00e9lectionnez l\u00b4\u00e9tat du Capteur d\u00b4occupation lorsque la Canton est occup\u00e9.
 MemoryVariableTip       = Entrez le nom (syst\u00e8me ou utilisateur) de la Variable M\u00e9moire (facultatif).
-TrackColor              = Couleur de la voie :
+TrackColor=Couleur de la voie
 TrackColorHint          = Choisissez la couleur de la  voie lorsque ce canton est inoccup\u00e9.
-OccupiedColor           = Couleur voie occup\u00e9e:
+OccupiedColor=Couleur voie occup\u00e9e
 OccupiedColorHint       = Choisissez la couleur de la  voie lorsque ce canton est occup\u00e9.
-ExtraColor              = Couleur Alternative de Voie:
+ExtraColor=Couleur Alternative de Voie
 ExtraColorHint          = Choisir la couleur de  voie pour une utilisation inoccup\u00e9e particuli\u00e8re, par exemple, allou\u00e9e.
 EnterTrackWidth         = Entrer la largeur de voie
 SideTrackWidth          = Largeur Voie d\u00b4\u00c9vitement
