--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_it.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_it.properties
@@ -141,11 +141,11 @@ OccupiedSense = Senso Occupato
 OccupiedSenseHint = Seleziona lo stato del Sensore di occupazione quando il Blocco \u00e8 occupato.
 #MemoryVariable = Nome Variabile in Memoria
 MemoryVariableTip = Batti Nome (sistema o utente) della Variabile di Memoria (opzionale).
-TrackColor = Colore Binario:
+TrackColor=Colore Binario
 TrackColorHint = Seleziona il colore dei binari quando questo blocco \u00e8 libero.
-OccupiedColor = Colore Binario Occupato:
+OccupiedColor=Colore Binario Occupato
 OccupiedColorHint = Seleziona il colore dei binari quando questo blocco \u00e8 occupato.
-ExtraColor = Colore Binario Alternativo:
+ExtraColor=Colore Binario Alternativo
 ExtraColorHint = Seleziona il colore dei binari per Libero ma con Utilizzo Speciale ( per esempio allocato ).
 EnterTrackWidth = Batti Larghezza Binari
 SideTrackWidth = Larghezza Binari Secondari
