--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_nl.properties
@@ -34,20 +34,20 @@ MenuItemOpenMnemonic = O
 
 # edit mode items
 RightHandAbbreviation = Re
-RHToolTip = Selecteer om een Rechtshandige Wissel op het paneel te plaatsen met de volgende Shift-klik.
+RHToolTip = Selecteer om een Rechtse Wissel op het paneel te plaatsen met de volgende Shift-klik.
 LeftHandAbbreviation = Li
-LHToolTip = Selecteer om een Linkshandige Wissel op het paneel te plaatsen met de volgende Shift-klik.
+LHToolTip = Selecteer om een Linkse Wissel op het paneel te plaatsen met de volgende Shift-klik.
 WYEAbbreviation = Symm.
-WYETurnout = Symmetrische Wissel
+WYETurnout = Symmetrisch Wissel
 WYEToolTip = Selecteer om een symmetrische Wissel op het paneel te plaatsen met de volgende Shift-klik.
-Crossover = Spoorwissel
-DoubleCrossover = Dubbele Spoorwissel
-DoubleCrossoverAbbreviation = Spoorwissel
-DoubleCrossoverToolTip = Selecteer om een dubbele spoorwisselset op het paneel te plaatsen met de volgende Shift-klik.
+Crossover = Overloopwissel
+DoubleCrossover = Kruiswissel
+DoubleCrossoverAbbreviation = Kruiswissel
+DoubleCrossoverToolTip = Selecteer om een Kruiswissel op het paneel te plaatsen met de volgende Shift-klik.
 #RHCrossover = RH Xover etc > moved to DisplayBundle
-RHCrossoverToolTip = Selecteer om een Rechtse spoorwisselset op het paneel te plaatsen met de volgende Shift-klik.
-LHCrossoverToolTip = Selecteer om een Linkse spoorwisselset op het paneel te plaatsen met de volgende Shift-klik.
-Connections_ = Verbindingen {0}
+RHCrossoverToolTip = Selecteer om een Rechtse Overloopwissel op het paneel te plaatsen met de volgende Shift-klik.
+LHCrossoverToolTip = Selecteer om een Linkse Overloopwissel op het paneel te plaatsen met de volgende Shift-klik.
+Connections = Verbindingen
 Dashed = Gestippeld
 DashedCheckBoxTip = Spoor tekenstijl - aan = streeplijn, uit = getrokken.
 MainlineBox = Hoofdspoor
@@ -55,8 +55,8 @@ MainlineCheckBoxTip = Spoor tekenstijl - aan = Hoofdspoor (dik), uit = Zijspoor 
 Solid = Gevuld
 Style = Stijl
 LevelCrossingToolTip = Selecteer om een Kruising op het paneel te plaatsen met de volgende Shift-klik.
-SingleSlipToolTip = Selecteer om een Halve Engelse Wissel op het paneel te plaatsen met de volgende Shift-klik.
-DoubleSlipToolTip = Selecteer om een Engelse Wissel op het paneel te plaatsen met de volgende Shift-klik.
+SingleSlipToolTip = Selecteer om een Halve Engels Wissel op het paneel te plaatsen met de volgende Shift-klik.
+DoubleSlipToolTip = Selecteer om een Engels Wissel op het paneel te plaatsen met de volgende Shift-klik.
 TrackSegment = Spoorsegment
 TrackSegmentToolTip = Selecteer om een Spoorsegment op het paneel te plaatsen met de volgende Shift-klik-en-sleep actie.
 DashedToolTip = Stel tekenstijl in voor Spoorsegment.
@@ -96,7 +96,7 @@ SignalMastButtonToolTip = Selecteer om een Seinmast-symbool op het paneel te pla
 IconsTitle = Symbolen
 IconLabel = Symbool-etiket
 IconLabelToolTip = Selecteer om een algemeen symbool op het paneel te plaatsen met de volgende Shift-klik.
-Slip = 1/2 Engelse Wissel
+Slip = 1/2 Engels Wissel
 Type = Type:
 Rotation = Draai\u00efng:
 Rotate = Roteer
@@ -108,7 +108,7 @@ StateToolTip = Kies de wisselstand die overeenkomst met rechtdoor.
 ContinuingState = Wisselstand voor Rechtdoor
 ConnectingBlock = Verbindingsblok
 BlockID = Blok: Naam
-BlockIDToolTip = Vulde naam in van het Blok dat hoort bij de nieuwe Wissel, Kruising of Spoorsegment.
+BlockIDToolTip = Vul de naam in van het Blok dat hoort bij de nieuwe Wissel, Kruising of Spoorsegment.
 OccupancySensorToolTip = Kies de Bezetmelder bij het nieuwe Blok; geen invoer = geen wijziging.
 BlockContentsLabel = Blok-inhoud
 Track = Spoorsegment
@@ -126,7 +126,7 @@ SecondTurnoutInvert = Inverteer tweede Wissel
 # individual edit pane items
 EditTurnout = Bewerk Wissel
 EditXing = Bewerk Kruising
-EditSlip = Bewerk Engelse Wissel
+EditSlip = Bewerk Engels Wissel
 #EditTrackSegment = Edit Track Segment # already in DisplayBundle.properties
 EditTurntable = Bewerk Draaischijf
 TurntableRadius = Draaischijf-doorsnede
@@ -158,12 +158,12 @@ EditBlockHint = Klik hier om bovenstaande informatie aan Blok {0} toe te voegen.
 UseCount = Aantal keer toegepast
 OccupiedSense = Bezet-toestand
 OccupiedSenseHint = Kies de stand van de Bezetmelder die geldt als Blok Bezet.
-MemoryVariableTip = Vulde Systeem- of Gebruikersnaam in van de Geheugenvariabele (optioneel).
-TrackColor = Spoorkleur:
+MemoryVariableTip = Vul de Systeem- of Gebruikersnaam in van de Geheugenvariabele (optioneel).
+TrackColor = Spoorkleur
 TrackColorHint = Kies de kleur voor Spoorsegmenten die Vrij zijn.
-OccupiedColor = Spoorkleur Bezet:
+OccupiedColor = Spoorkleur Bezet
 OccupiedColorHint = Kies de kleur voor Spoorsegmenten die Bezet zijn.
-ExtraColor = Extra Spoorkleur:
+ExtraColor = Extra Spoorkleur
 ExtraColorHint = Kies de kleur voor Spoorsegmenten met speciale functie, bijv. Toegewezen.
 EnterTrackWidth = Vul lijndikte voor Spoorsegment in
 SideTrackWidth = Lijndikte Zijspoor
@@ -181,7 +181,7 @@ ReporterDoneHint = Klik om een nieuw Reporter-symbool met bovenstaande kenmerken
 HideTrack = Verberg Spoordeel
 HideTurnout = Verberg Wissel
 HideCrossing = Verberg Kruising
-HideSlip = Verberg Engelse Wissel
+HideSlip = Verberg Engels Wissel
 HiddenToolTip = Selecteer om dit spoorsegment te verbergen tenzij in Bewerkingsmodus.
 ScaleTrackDiagram = Verschaal/Verschuif Spoorplan
 XFactorLabel = Horizontale (x) schaalfactor:
@@ -224,8 +224,8 @@ SetSignals = Stel Seinschilden in...
 SetSensors = Stel Terugmelders in...
 SetSignalMasts = Stel Seinmasten in...
 LevelCrossing = Kruising
-LayoutSingleSlip = Halve Engelse Wissel
-LayoutDoubleSlip = Engelse Wissel
+LayoutSingleSlip = 1/2 Engels Wissel
+LayoutDoubleSlip = Engels Wissel
 Anchor = Ankerpunt
 EdgeNotLinked = Niet aangesloten
 EdgeEditLink = Bewerk aansluiting
@@ -261,7 +261,7 @@ AlignY          = Lijn horizontaaal uit
 
 # option menu items
 OptionsMnemonic = O
-EditMode = Bewerk-stand
+EditMode = Bewerken-modus
 EditModeMnemonic = E
 EditModeAccelerator = E
 
@@ -342,19 +342,19 @@ ResetTurnoutSize = Gebruik standaardgrootte Wisselsymbool
 SkipInternalTurnout = Sla interne Wissels zonder Seinschild over
 SignalsAtTurnout = Plaats Seinschilden bij Wissel
 SignalsAtBoundary = Plaats Seinschilden bij Blokgrens
-SignalsAtXoverTurnout = Plaats Seinschilden bij Spoorwissel
+SignalsAtXoverTurnout = Plaats Seinschilden bij Overloopwissel
 SignalsAtLevelXing = Plaats Seinschilden bij Kruising
-SignalsAtTToTTurnout = Plaats Seinschilden bij naar-elkaar-gekeerde Wissels
-SignalsAtSlip = Plaats Seinschilden bij Engelse Wissel
+SignalsAtTToTTurnout = Plaats Seinschilden bij punt-aan-punt Wissels
+SignalsAtSlip = Plaats Seinschilden bij Engels Wissel
 SignalsAt3WayTurnout = Plaats Seinschilden bij Driewegwissel
 SensorsAtBoundary = Plaats Bezetmelders bij Blokgrens
 SensorsAtTurnout = Plaats Bezetmelders bij Wissel
 SensorsAtLevelXing = Plaats Bezetmelders bij Kruising
-SensorsAtSlip = Plaats Bezetmelders bij Engelse Wissel
+SensorsAtSlip = Plaats Bezetmelders bij Engels Wissel
 SignalMastsAtBoundary = Plaats Seinmasten bij Blokgrens
 SignalMastsAtTurnout = Plaats Seinmasten bij Wissel
 SignalMastsAtLevelXing = Plaats Seinmasten bij Kruising
-SignalMastsAtLayoutSlip = Plaats Seinmasten bij Engelse Wissel
+SignalMastsAtLayoutSlip = Plaats Seinmasten bij Engels Wissel
 TurnoutAName = Wissel A (voorste puntstuk)
 TurnoutBName = Wissel B (2e puntstuk)
 SignalsTurnoutNameHint = Kies/Vul de Systeem- of Gebruikersnaam in van de Wissel om Seinen bij te zetten.
@@ -378,7 +378,7 @@ East = Oost
 West = West
 Signal = Seinschild
 Tracks) = sporen)
-EnterXOverTurnout = Kies naam van Spoorwissel-Wissel
+EnterXOverTurnout = Kies naam van Overloop-Wissel
 XContinuing = {0}hoek - Doorgaand
 XDiverging  = {0}hoek - Afbuigend
 TrackXConnect = {0} Aansluitpunt
@@ -417,14 +417,14 @@ SignalsError16 = Fout - De gekozen Bloknamen komen overeen met "{0}" Kruisingen.
 SignalsError17 = Fout - Geen enkele Kruising komt overeen met de ingevulde Blok(ken).\nKies ander(e) Blok(ken).
 SignalsError18 = Fout - Deze optie vereist 2 Wissels (RH, LH of Symmetrisch)\nmet de puntstukken aan elkaar verbonden door 1 Spoorsegment.
 SignalsError19 = Fout - Deze optie vereist 2 Wissels (RH or LH) die op elkaar aansluiten\nzoals ingevuld, met daartussen een kort Spoorsegment. Ze zijn niet gevonden.
-InfoMessage1 = Sorry, deze optie werkt niet\nmet Spoorwissels.
+InfoMessage1 = Sorry, deze optie werkt niet\nmet Overloopwissels.
 InfoMessage2 = Sorry, kan alleen Seinschilden plaatsen bij Wissels\ndie vertikaal or horizontaal op het Spoorplan staan afgebeeld.
 InfoMessage3 = Sorry, kan alleen Seinschilden plaatsen bij Ankerpunten\nwaar het spoor vertikaal or horizontaal op het Spoorplan is afgebeeld.
 InfoMessage4 = Kon de Logica niet opbouwen omdat Blok "{0}"\ngeen Bezetmelder heeft.
 InfoMessage5 = Kon de Logica niet opbouwen omdat het volgende Seinschild (in of \naan het eind van Blok "{0}") nog niet is gedefinieerd.
 InfoMessage6 = Kon de Logica niet opbouwen omdat Blokken rond dit element\nnog niet zijn gedefinieerd.
 InfoMessage7 = Kon de Logica niet opbouwen omdat nog niet alle aansluitingen\ner om heenzijn gedefinieerd.
-InfoMessage8 = Sorry, 'Plaats Seinschilden bij Spoorwissel'\nwerkt niet met andere types Wissel.
+InfoMessage8 = Sorry, 'Plaats Seinschilden bij Overloopwissel'\nwerkt niet met andere types Wissel.
 InfoMessage9 = Sorry, Spoorplan Editor ondersteunt niet\nseinlogica voor een enkel Seinschild bij het puntstuk van een Driewegwissel.
 SignalsWarn1 = Waarschuwing - Logic was set up at Seinschild "{0}", but no sensors\nto protect for cross traffic at the level crossing were found.
 SignalsWarn2 = Waarschuwing - Volgens de opdracht is het ontbrekend van Seinschilden bij Wissel "{0}" \ngenegeerd bij het opzetten van de logica voor Seinschild "{1}".
@@ -466,8 +466,8 @@ Question3 = Weet je zeker dat je deze Kruising wilt verwijderen van dit Paneel, 
 Question3r = Weet je zeker dat je deze Kruising wilt verwijderen van dit Paneel?
 Question4 = Weet je zeker dat je deze Draaischijf wilt verwijderen van dit Paneel, incl. alle aansluitende Spoorsegmenten?
 Question4r = Weet je zeker dat je deze Draaischijf wilt verwijderen van dit Paneel?
-Question5 = Weet je zeker dat je deze Engelse Wissel wilt verwijderen, incl. alle aansluitende Spoorsegmenten?
-Question5r = Weet je zeker dat je deze Engelse Wissel wilt verwijderen van dit Paneel?
+Question5 = Weet je zeker dat je dit Engels Wissel wilt verwijderen, incl. alle aansluitende Spoorsegmenten?
+Question5r = Weet je zeker dat je dit Engels Wissel wilt verwijderen van dit Paneel?
 Question6 = Weet je zeker dat je alle geselecteerde elementen wilt verwijderen, incl. alle aansluitende Spoorsegmenten?
 Question7 = Weet je zeker dat je deze Aftakking van de draaischijf wilt wissen, incl. alle aansluitende Spoorsegmenten?
 Warn1 = Waarschuwing - Aansluitingen voor Blok "{0}" op de Panelen "{1}" en "{2}" zijn van een verschillend type.
@@ -568,9 +568,9 @@ VetoSignalHeadIconFound = Is in gebruik als Sein-symbool
 VetoSignalHeadAssignedToTurnout = Is toegewezen aan Wissel {0}
 VetoSignalHeadAssignedToPoint = Is toegewezen an Blok-grens
 VetoSignalHeadAssignedToLevelXing = Is toegewezen aan een Kruising
-VetoSignalHeadAssignedToLayoutSlip = Is toegewezen aan Engelse Wissel {0}
+VetoSignalHeadAssignedToLayoutSlip = Is toegewezen aan Engels Wissel {0}
 VetoTurnoutIconFound = Wordt gebruikt met een Wissel-symbool.<br>Deze koppeling wordt verwijderd, maar het symbool blijft op het Paneel staan.
-VetoSlipIconFound = Wordt gebruikt met een symbool voor een Engelse Wissel.<br>Deze koppeling wordt verwijderd, maar het symbool blijft op het Paneel staan.
+VetoSlipIconFound = Wordt gebruikt met een symbool voor een Engels Wissel.<br>Deze koppeling wordt verwijderd, maar het symbool blijft op het Paneel staan.
 VetoSecondTurnout = Is als tweede Wissel gekoppeld aan {0}.<br><br>Deze koppeling wordt verwijderd.
 VetoRayTurntableControl = Wordt gebruikt om Draaischijf {0} te bedienen
 VetoMemoryIconFound = Is in gebruik als Symbool
