--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_ca.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_ca.properties
@@ -150,9 +150,9 @@ OccupiedSenseHint = Selecciona l'estat del Sensor d'Ocupaci\u00f3 quan aquest bl
 MemoryVariableTip = Entra el nom (de sistema o usuari) d'una variable de mem\u00f2ria (opcional).
 TrackColor = Color de la Via:
 TrackColorHint = Selecciona el Color de la Via quan aquest bloc est\u00e0 desocupat.
-OccupiedColor = Color de la Via Ocupada:
+OccupiedColor=Color de la Via Ocupada
 OccupiedColorHint = Selecciona el Color de la Via quan aquest bloc est\u00e0 ocupat.
-ExtraColor = Color de la Via Alternatiu:
+ExtraColor=Color de la Via Alternatiu
 ExtraColorHint = Selecciona el color de la via desocupada per a \u00fas especial ex. assignada.
 EnterTrackWidth = Entra la longitud de la via
 SideTrackWidth = Longitud de la via secund\u00e0ria
