--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_ja_JP.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_ja_JP.properties
@@ -94,9 +94,9 @@ UseCount = \u73fe\u5728\u306e\u4f7f\u7528\u30ab\u30a6\u30f3\u30c8
 OccupiedSense = \u8eca\u4e21\u5b58\u5728\u691c\u77e5
 OccupiedSenseHint = Select the occupancy Sensor state when the Block is occupied.
 MemoryVariableTip = \u30e1\u30e2\u30ea\u30fc\u5909\u6570\u306e\uff08\u30b7\u30b9\u30c6\u30e0\u307e\u305f\u306f\u30e6\u30fc\u30b6\u30fc\uff09\u540d\u3092\u5165\u529b\u3057\u3066\u4e0b\u3055\u3044\u3002(system or user) of Memory Variable (optional).
-TrackColor = \u8def\u7dda\u306e\u8272:
+TrackColor=\u8def\u7dda\u306e\u8272
 TrackColorHint = Select the track color when this block is unoccupied.
-OccupiedColor = \u8eca\u4e21\u5b58\u5728\u6642\u8def\u7dda\u8272:
+OccupiedColor=\u8eca\u4e21\u5b58\u5728\u6642\u8def\u7dda\u8272
 OccupiedColorHint = \u3053\u306e\u30d6\u30ed\u30c3\u30af\u306b\u8eca\u4e21\u304c\u5b58\u5728\u3059\u308b\u3068\u304d\u306e\u8def\u7dda\u306e\u8272\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002.
 EnterTrackWidth = \u8def\u7dda\u5e45\u5165\u529b
 SideTrackWidth = \u5074\u7dda\u306e\u5e45
