Warrant prefs using spinners remove try-cath, add min-max check 4 labels with : display in 1 line Ij debug setting update, is OK

--- a/java/src/jmri/jmrit/logix/WarrantBundle_ca.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle_ca.properties
@@ -74,12 +74,12 @@ speedMph        = Miles per hour
 speedKmph       = Kilometers per hour
 throttlesetting = Throttle setting should be between 0.0 and 1.0
 badSpeed        = {0} {1} speed setting cannot be made.
-TimeIncrement   = Ramp Step Time (milliseconds)
-RampIncrement   = Ramp Step throttle increment
-timeWarning     = The time between speed changes must be at least 200 milliseconds.
-rampIncrWarning = {0} is an extreme amount for step increment. A value between .03 and .10 is more reasonable.
-ThrottleScale   = Throttle Setting/Speed Factor
-StepIncrement   = StepIncrements
+TimeIncrement=Ramp Step Time:
+RampIncrement=Ramp Step throttle increment:
+#timeToolTip     = The time between speed changes must be at least 200 milliseconds.
+#rampIncrWarning = {0} is an extreme amount for step increment. A value between .03 and .10 is more reasonable.
+ThrottleScale=Throttle Setting/Speed Factor:
+StepIncrement   = Step Increments
 ToolTipLayoutScale= Needed to compute speed and distance for warrants
 ToolTipSearchDepth= Upper limit for the number of OBlocks in a warrant route
 ToolTipSpeedNameTable=Every Speed Name used in your Signal System's aspects must be a row in this table
@@ -137,7 +137,7 @@ ExitPortalName  = Exit Portal Name
 CalculateRoute  = Calculate Route
 Calculate       = Calculate
 DebugRoute      = Debug Route
-SearchDepth     = Max Number of Blocks in Route
+SearchDepth=Max Number of Blocks in Route:
 SearchRoute     = Searching for Route
 Roster          = Engine Roster
 Warrant         = Warrant
