--- a/java/src/jmri/jmrit/logix/WarrantBundle_fr.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle_fr.properties
@@ -73,11 +73,11 @@ speedMph        = Miles par heure
 speedKmph       = Kilom\u00e8tres par heure
 throttlesetting = Le r\u00e9glage du r\u00e9gulateur doit \u00eatre entre 0.0 et 1.0
 badSpeed        = {0} {1} r\u00e9glage de la vitesse ne peut pas \u00eatre effectu\u00e9..
-TimeIncrement   = Dur\u00e9e Cran Rampe (millisecondes)
-RampIncrement   = Incr\u00e9ment Rampe r\u00e9gulateur
-timeWarning     = Le temps entre les changements de vitesse doit \u00eatre au moins de  200 millisecondes.
-rampIncrWarning = {0} est une valeur extr\u00eame pour l'incr\u00e9ment.  Une valeur entre .03 et .10 est plus raisonnable.
-ThrottleScale   = R\u00e9glage R\u00e9gulateur/Facteur de Vitesse
+TimeIncrement=Dur\u00e9e Cran Rampe :
+RampIncrement=Incr\u00e9ment Rampe r\u00e9gulateur :
+#timeToolTip     = Le temps entre les changements de vitesse doit \u00eatre au moins de  200 millisecondes.
+#rampIncrWarning = {0} est une valeur extr\u00eame pour l'incr\u00e9ment.  Une valeur entre .03 et .10 est plus raisonnable.
+ThrottleScale=R\u00e9glage R\u00e9gulateur/Facteur de Vitesse :
 StepIncrement   = Incr\u00e9ments
 ToolTipLayoutScale= N\u00e9cessaires pour calculer vitesse et la distance pour les bulletins
 ToolTipSearchDepth= Limite sup\u00e8rieure pour le nombre de OCantons dans un itin\u00e9raire de bulletin 
@@ -136,7 +136,7 @@ ExitPortalName  = Nom du Portail de Sortie
 CalculateRoute  = Calculer l'Itin\u00e9raire
 Calculate       = Calculer
 DebugRoute      = D\u00e9boger l'Itin\u00e9raire
-SearchDepth     = Nombre Maxi de Cantons dans l'Itin\u00e9raire
+SearchDepth=Nombre Maxi de Cantons dans l'Itin\u00e9raire :
 SearchRoute     = Recherche d'Itin\u00e9raire
 Roster          = Inventaire Machine
 Warrant         = Bulletin
