--- a/java/src/jmri/jmrit/logix/WarrantBundle_da.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle_da.properties
@@ -72,11 +72,11 @@ speedMph        = Miles per hour
 speedKmph       = Kilometers per hour
 throttlesetting = Throttle setting should be between 0.0 and 1.0
 badSpeed        = {0} {1} speed setting cannot be made.
-TimeIncrement   = Ramp Step Time (milliseconds)
-RampIncrement   = Ramp Step throttle increment
-timeWarning     = The time between speed changes must be at least 200 milliseconds.
-rampIncrWarning = {0} is an extreme amount for step increment. A value between .03 and .10 is more reasonable.
-ThrottleScale   = Throttle Setting/Speed Factor
+TimeIncrement=Ramp Step Time:
+RampIncrement=Ramp Step throttle increment:
+#timeToolTip     = The time between speed changes must be at least 200 milliseconds.
+#rampIncrWarning = {0} is an extreme amount for step increment. A value between .03 and .10 is more reasonable.
+ThrottleScale=Throttle Setting/Speed Factor:
 StepIncrement   = StepIncrements
 ToolTipLayoutScale= Needed to compute speed and distance for warrants
 ToolTipSearchDepth= Upper limit for the number of OBlocks in a warrant route
