--- a/java/src/jmri/jmrit/logix/WarrantBundle_de.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle_de.properties
@@ -70,11 +70,11 @@ speedMph        = Meilen pro Stunde
 speedKmph       = Kilometer pro Stunde
 throttlesetting = Fahrreglereinstellung zwischen 0.0 und 1.0 w\u00e4hlen
 badSpeed        = {0} {1} Geschwindigkeitseinstellung konnte nicht erstellt wurden.
-TimeIncrement   = Anstiegintervall (Millisekunden)
-RampIncrement   = Anstiegstufewert Fahrregler
-timeWarning     = Zwischen Geschwindigkeits\u00e4nderungen eine Wartezeit von mind. 200 Millisekunden halten.
-rampIncrWarning = {0} ist ein extrem gro\u00dfen Stufenwert. Ein Wert zwischen .03 und .10 gilt als normal.
-ThrottleScale   = Fahrreglereingabe/Geschwindigkeitszahl
+TimeIncrement=Anstiegintervall:
+RampIncrement=Anstiegstufewert Fahrregler:
+#timeToolTip     = Zwischen Geschwindigkeits\u00e4nderungen eine Wartezeit von mind. 200 Millisekunden halten.
+#rampIncrWarning = {0} ist ein extrem gro\u00dfen Stufenwert. Ein Wert zwischen .03 und .10 gilt als normal.
+ThrottleScale=Fahrreglereingabe/Geschwindigkeitszahl:
 StepIncrement   = Stufenwert
 ToolTipLayoutScale= Needed to compute speed and distance for warrants
 ToolTipSearchDepth= Upper limit for the number of OBlocks in a warrant route
@@ -133,7 +133,7 @@ ExitPortalName  = Exit Portal Name
 CalculateRoute  = Calculate Route
 Calculate       = Calculate
 DebugRoute      = Debug Route
-SearchDepth     = Max Number of Blocks in Route
+SearchDepth=Max Number of Blocks in Route:
 SearchRoute     = Searching for Route
 Roster          = Engine Roster
 Warrant         = Warrant
