Changes as suggested, add range to tooltip

--- a/java/src/jmri/jmrit/logix/WarrantBundle_fr.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle_fr.properties
@@ -84,7 +84,7 @@ ToolTipSearchDepth= Limite sup\u00e8rieure pour le nombre de OCantons dans un it
 ToolTipSpeedNameTable=Tous les Noms de Vitesse utilis\u00e9s dans les aspects de votre Syst\u00e8me de Signalisation doivent \u00eatre dans une rang\u00e9e de cette table
 ToolTipAppearanceTable=Carte des apparence des T\u00eates Signal avec les Noms de Vitesse . Toutes les apparences T\u00eates Signal doivent \u00eatre une ligne de cette table
 ToolTipRampIncrement=Le r\u00e9glage d'Incr\u00e9ment du R\u00e9gulateur pour chaque vitesse change lors de la d\u00e9c\u00e9laration ou de l'acc\u00e9l\u00e9ration
-ToolTipTimeIncrement=La dur\u00e9e en millisecondes entre chaque vitesse change lors de la d\u00e9c\u00e9laration ou de l'acc\u00e9l\u00e9ration
+ToolTipTimeIncrement=La dur\u00e9e en millisecondes entre chaque vitesse change lors de la d\u00e9c\u00e9laration ou de l'acc\u00e9l\u00e9ration (de 200 \u00e1 10.000 ms)
 ToolTipInterpretation= Choisir comment le code devra interpreter les Noms de Valeurs de Vitesse\u00e9
 ToolTipPercentNormal=Valeur en pourcentage de la vitesse actuelle  comme enregistr\u00e9 avec l'aspect illimit\u00e9 du signal
 ToolTipPercentThrottle= Valeur en pourcentage du r\u00e9glage pleine vitesse du r\u00e9gulateur (exige que la vitesse est adapt\u00e9e dans l'Inventaire)
