--- a/java/src/jmri/jmrit/logix/WarrantBundle_da.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle_da.properties
@@ -83,7 +83,7 @@ ToolTipSearchDepth= Upper limit for the number of OBlocks in a warrant route
 ToolTipSpeedNameTable=Every Speed Name used in your Signal System's aspects must be a row in this table
 ToolTipAppearanceTable=Map SignalHead appearance to Speed Name. Every SignalHead appearance must be a row in this table
 ToolTipRampIncrement=Throttle setting increment for each speed change when ramping speed
-ToolTipTimeIncrement=Length of time in milliseconds between each speed change when ramping speed
+ToolTipTimeIncrement=Length of time in milliseconds between each speed change when ramping speed (from 200 to 10,000 ms)
 ToolTipInterpretation=Choose how the code should interpret Speed Name Values
 ToolTipPercentNormal=Value is percentage of current speed as recorded with unrestricted signal aspect
 ToolTipPercentThrottle= Value is percentage of the full throttle setting  (requires Roster is speed matched)
